# course-tracker

./: .replit  pyproject.toml  replit.md
.local/state/replit/agent/design_reference/1ec58ca9-dd82-4a92-99e0-7464b9d54877/: d32bd4f3-147f-403c-812b-2cf281854740.html
client/src/: index.css
client/src/components/: academic-progress.tsx  ai-option-tracker.tsx  course-catalog.tsx  course-recommendations.tsx  graduation-timeline.tsx  header.tsx  interest-survey.tsx
client/src/data/: courses.ts  curriculum.ts
client/src/lib/: queryClient.ts
client/src/pages/: dashboard.tsx
server/: main.py  routes.ts  storage.ts
shared/: schema.ts
